--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,9 @@
     "files.associations": {
         "stdio.h": "c",
         "server.h": "c",
-        "client.h": "c"
+        "client.h": "c",
+        "select.h": "c",
+        "reply_codes.h": "c",
+        "lib.h": "c"
     }
 }
