--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,19 @@
         "client.h": "c",
         "select.h": "c",
         "reply_codes.h": "c",
-        "lib.h": "c"
+        "lib.h": "c",
+        "commands.h": "c",
+        "*.tcc": "c",
+        "deque": "c",
+        "vector": "c",
+        "exception": "c",
+        "memory": "c",
+        "istream": "c",
+        "new": "c",
+        "ostream": "c",
+        "system_error": "c",
+        "circular_buffer.h": "c",
+        "socket.h": "c",
+        "sstream": "c"
     }
 }
