--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,6 +28,7 @@
         "stdbool.h": "c",
         "errno.h": "c",
         "string": "c",
-        "string_view": "c"
+        "string_view": "c",
+        "stdarg.h": "c"
     }
 }
