--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,6 +29,8 @@
         "errno.h": "c",
         "string": "c",
         "string_view": "c",
-        "stdarg.h": "c"
+        "stdarg.h": "c",
+        "un.h": "c",
+        "inet.h": "c"
     }
 }
