--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,6 +31,7 @@
         "string_view": "c",
         "stdarg.h": "c",
         "un.h": "c",
-        "inet.h": "c"
+        "inet.h": "c",
+        "initializer_list": "c"
     }
 }
